# adk-quality-lab

./: .gitignore  Makefile  NOTICE  README.md  log.md  pyproject.toml  serpapi_response.json
.cache/: gold_run.json
.github/: copilot-instructions.md
.github/agents/: README.md  implementer.agent.md  reviewer.agent.md
.github/workflows/: ci.yml
.plans/task-planning-variant-audit/: plan.md
adk_quality_lab/: __init__.py  runner.py
adk_quality_lab/calibration/: __init__.py  bootstrap.py  kappa.py
adk_quality_lab/cli/: __init__.py  dashboard.py  eval.py  kappa.py  optimize.py  show.py
adk_quality_lab/data/: iata_carriers.txt
adk_quality_lab/datasets/: __init__.py  loader.py  schema.py
adk_quality_lab/observability/: __init__.py  callbacks.py  firestore_writer.py
adk_quality_lab/optimizer/: __init__.py  cluster.py  instruction_tuner.py  meta_prompt.py
adk_quality_lab/raters/: __init__.py  deterministic.py  groundedness.py  llm_judge.py
adk_quality_lab/tools/: agent_runner.py  capture_fixtures.py  generate_cases.py
datasets/: f1_count_hallucination.jsonl  f2_groundedness.jsonl  tail_flights.jsonl
datasets/fixtures/: index.json
datasets/gold/: f1_gold.jsonl  f2_gold.jsonl
docs/: run-ids.md  sim-eval-report.md
runs/: runs.jsonl
scripts/: compare_variants.py  run_baseline_trace.py  verify_serpapi_live.py
tests/: test_core.py  test_filter_flights.py  test_smoke.py  test_tools.py
wiki/: architecture.md  cleanup-audit.md  datasets-raters.md  eval-pipeline.md  index.md  known-issues.md  log.md  testing.md  tools-wiring.md
(+85 files in other folders)
